# tiktok_stats

./: alembic.ini  main.py  pyproject.toml  scrape_tiktok_script.py  test.ipynb
apps/tiktok/: enums.py  models.py  utils.py
apps/tiktok/routers/: api.py  views.py
core/clients/: __init__.py  apify.py
core/database/: __init__.py  base.py  dependencies.py  mixins.py  types.py
core/settings/: base.py
migrations/: env.py
migrations/versions/: 2026_03_31_1709-0bf6b24d331d_.py  2026_03_31_1712-2badcdcdf527_.py  2026_04_01_1727-55c3f3c19b0d_.py  2026_04_10_1243-45d98acea579_.py
static/css/: app.css
tailwindcss/: package-lock.json
templates/: base.html  campaign_history.html
