[project]
name = "tiktokstats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apify-client>=2.5.0",
    "fastapi[standard]>=0.135.2",
    "pandas>=3.0.2",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
